--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -10,12 +10,24 @@
   <body>
     <a-scene background="color: #333333">
       <a-box id="myBox"
-        width="3"
-        height="2"
-        depth="1"
-        color="#BBAA33" 
-        shadow>
+        width="2"
+        height="1"
+        depth="4"
+        color="purple" 
+        shadow="2"
+        position="0 2 -5"
+        rotation="20 35 10"
+        scale="-2 1 -1">
       </a-box>
+      <a-sphere width="0" 
+        height="0.5"
+        radius="1.25" 
+        depth="2"
+        color="#EF2D5E" 
+        position="5 2 -5"
+        rotation="20 35 10"
+        scale="-2 1 -1">
+      </a-sphere>
     </a-scene>
   </body>
 </html>
