--- a/03Textures/index.html
+++ b/03Textures/index.html
@@ -14,13 +14,13 @@
           
       </a-assets>
       <a-box id="myBox" 
-       material="src: #wood"
         position="0 1 -3" 
         rotation="0 45 0" 
         width="3" 
         height="1" 
         depth="1" 
-        shadow>
+        shadow
+        material="src: #wood">
       </a-box>
       <a-plane id="ground"
         position="0 0 -4" 
