--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -35,6 +35,9 @@
         height="1" 
         depth="1" 
         material="src: #wood2"
+        position="-1 1.6 -5" 
+        animation="property: position; to: 1 8 -10; dur: 2000; easing: linear; loop: true" 
+        color="tomato"
         shadow>  
       </a-box>
       <a-plane id="ground"
