--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -36,8 +36,11 @@
         depth="1" 
         material="src: #wood2"
         position="-1 1.6 -5" 
-        animation="property: position; to: 1 8 -10; dur: 2000; easing: linear; loop: true" 
-        color="tomato"
+        animation="property: rotation; 
+                   to: 90 360 180; 
+                    dur: 2000; 
+                    easing: linear; 
+                    loop: true"
         shadow>  
       </a-box>
       <a-plane id="ground"
