--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -36,11 +36,11 @@
         depth="1" 
         material="src: #wood2"
         position="-6 6 -5" 
-        animation="property: rotation; 
-                   to: 160 360 180; 
-                    dur: 4000; 
-                    easing: linear; 
-                    loop: true"
+        animation="property: 
+                  position; to: 3 8 -10; 
+                  dur: 2000; 
+                  easing: linear; 
+                  loop: true"
         shadow>  
       </a-box>
       <a-plane id="ground"
