--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -36,8 +36,7 @@
         depth="1" 
         material="src: #wood2"
         position="-6 6 -5" 
-        animation="property: 
-                  position; to: 3 8 -10; 
+        animation="property:rotation; 
                   dur: 2000; 
                   easing: linear; 
                   loop: true"
